--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Document</title>
     </head>
 
-    <body>
+    <body id="body" class="container">
         
         <script src="./js/script.js"></script>
     </body>
